src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin: 0;
  padding: 0;
}

.background-image {
  background: url("/FrontendMentor-Intro-component-with-sign-up-form/bg-intro-mobile.png") hsl(0, 100%, 74%) no-repeat center;
}

.overlay {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 3rem 1.5rem;
  color: #ffffff;
}

.overlay h1 {
  font-size: 2rem;
  margin-bottom: 1rem;
  text-align: left;
}

.overlay p {
  margin-bottom: 2rem;
  line-height: 1.8;
  text-align: left;
}

.trial-info {
  background-color: hsl(248, 32%, 49%);
  padding: 0.8rem 1rem;
  border-radius: 0.5rem;
  text-align: center;
  box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.3);
}

.form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  background-color: #fff;
  padding: 2rem;
  border-radius: 0.5rem;
  box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.3);
}

.form input {
  padding: 0.8rem 1rem;
  border-radius: 0.3rem;
  border: 1px solid hsl(246, 25%, 77%);
  font-weight: bold;
  letter-spacing: 0.05rem;
  color: hsl(248, 32%, 49%);
}

.form button {
  background-color: hsl(154, 59%, 51%);
  color: #fff;
  font-size: 1rem;
  border: none;
  outline: none;
  cursor: pointer;
  letter-spacing: 0.1rem;
  font-weight: bold;
  padding: 0.8rem 2rem;
  border-radius: 0.5rem;
  box-shadow: 0px 7px 0px hsl(154, 58%, 44%);
}

.form footer {
  color: hsl(246, 25%, 77%);
  text-align: center;
}

.form footer span {
  color: hsl(0, 100%, 74%);
  font-weight: bold;
}

.error {
  color: hsl(0, 100%, 74%);
  font-size: 0.75rem;
  margin: 2px 0 0 0;
  padding: 0;
  text-align: left;
}

.input-container {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

@media (min-width: 768px) {
  .background-image {
    background: url("/FrontendMentor-Intro-component-with-sign-up-form/bg-intro-desktop.png") hsl(0, 100%, 74%) no-repeat center;
  }

  .overlay {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    height: 100vh;
    max-width: 1200px;
    margin: auto;
    gap: 2rem;
  }

  .overlay h1 {
    font-size: 3rem;
  }

  .overlay p {
    font-size: 0.9rem;
  }
}

